fix cutoff context menus in nft cards

--- a/src/Assets/styles/override.scss
+++ b/src/Assets/styles/override.scss
@@ -327,7 +327,16 @@ canvas {
   -webkit-border-radius: 15px;
   background: $bgColor1;
   transition: 0.7s;
-  overflow: hidden;
+
+  .card-img-container {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    -moz-border-radius-topleft: 15px;
+    -moz-border-radius-topright: 15px;
+    -webkit-border-top-left-radius: 15px;
+    -webkit-border-top-right-radius: 15px;
+    overflow: hidden;
+  }
 
   img {
     width: 100%;
